# GamaVM

./: .gitignore  test.html  test.js
Digiplay/Android/app/: build.gradle
Digiplay/Android/gradle/wrapper/: gradle-wrapper.properties
Digiplay/Digiplay copy 2/Digiplay/: Info.plist  compiler.c  digiplay.cpp  fmath.c  gc.c  jvm.c  jvm.h  miniz.c
Digiplay/Digiplay copy 2/Digiplay.xcodeproj/: project.pbxproj
Digiplay/Digiplay copy 2/Digiplay.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
Digiplay/Digiplay copy 3/Digiplay/: compiler.c  gc.c  jvm.c  jvm.h  miniz.h  opcodes.h
Digiplay/Digiplay copy/Digiplay/: aot.c  compiler.c  digiplay.h  gc.c  geom.h  interpreter.c  jvm.c  jvm.h  natives.h  natives.m
Digiplay/Digiplay/Digiplay/: Info.plist  compiler.c  digiplay.c  digiplay.h  digiplay_ios.m  digiplay_metal.m  digiplay_opengl.c  gc.c  geom.cpp  gfx.cpp  gfx.h  jdwp.cpp  jdwp.h  jvm.c  jvm.h  jvm_natives.c  main.mm  natives.h  natives.m
Digiplay/Digiplay/Digiplay.xcodeproj/: project.pbxproj
Digiplay/Swift/Swift/: AppDelegate.swift  SceneDelegate.swift  ViewController.swift
Digiplay/Swift/Swift.xcodeproj/: project.pbxproj
Digiplay/Swt/Swt/: AppDelegate.swift  SceneDelegate.swift  ViewController.swift
Digiplay/Swt/Swt.xcodeproj/: project.pbxproj
Digiplay/Swt/Swt.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
JavaFX/nbproject/: build-impl.xml  genfiles.properties  project.properties
JavaFX/src/javafx/: FXMLDocument.fxml  FXMLDocumentController.java  JavaFX.java
MyApplication2/: okeyextra.keystore
MyApplication2/app/: build.gradle
MyApplication2/app/src/main/: AndroidManifest.xml
MyApplication2/app/src/main/cpp/: CMakeLists.txt  android.cpp  aot.c  interpreter.c  jvm.c  jvm.h  native-lib.cpp  opcodes.h  vm.h
MyApplication2/gradle/wrapper/: gradle-wrapper.properties
classpath/: pom.xml
compiler/: pom.xml  test.js
csharp/: BasicBlock.cs  Converter.cs  EvaluationStack.cs  ILImporter.cs  ILUtils.cs  Program.cs  Test.cs  TypeUtils.cs  Types.cs  Writer.cs  csharp.csproj  csharp.sln  packages.config
csharp/Properties/: AssemblyInfo.cs
debugger/: pom.xml
debugger2/: pom.xml
digi/digi/: Info.plist  android_native.cpp  android_net.cpp  class.c  d.c  d.cpp  d.h  d_gl.c  digiplay.c  digiplay.h  digiplay_gl.c  digiplay_particle.c  exception.c  gamaot.c  gamavm.c  gamavm.h  gc.c  geom.h  interpret.c  invoke.c  ios_main.m  ios_native.m  ios_net.m  ivank.cpp  ivank.h  jdwp.cpp  jdwp.h  jni.c  jni.cpp  main.m  mem.c  native_ios.m  natives.c  objc.m  parse.c  player.c  render.c  sprite.c  sprite.h  sprite_gl.c  (+4 more)
digi/digi.xcodeproj/: project.pbxproj
digi/digi.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
digi/digi.xcodeproj/xcshareddata/xcschemes/: digi.xcscheme
dotnet/: build.xml
dotnet/nbproject/: build-impl.xml  genfiles.properties  project.properties  project.xml
dotnet/src/: Main.java
jvmtest/: dependency-reduced-pom.xml  pom.xml
jvmtest/src/main/java/: B.java  Main.java  My.java  (+4 more)
lang/: pom.xml
okeyextra/: pom.xml
srv/: pom.xml
(+323 files in other folders)
